k8s/namespaces/netbox/netbox/patches/ptlsbox/cluster-00/netbox.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-netbox
  namespace: netbox
spec:
  rules:
    - host: netbox.sandbox.platform.hmcts.net
      http:
        paths:
        - backend:
            service:
              name: netbox
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
status:
  loadBalancer: {}
